glFusion ChangeLog

v1.1.0
------------
- Fixed slider height issue and added border in menu colorpicker (Eric)
		public_html/admin/plugins/sitetailor/css/mooRainbow.css

- Adjusted layout of comments for better readability (Eric)
		public_html/layout/nouveau/comment/comment.thtml
		public_html/layout/nouveau/comment/commentbar.thtml
		public_html/layout/nouveau/comment/thread.thtml

- Implemented glFusion CSS layout driven header / footer functions.
        public_html/lib-common.php
        public_html/layout/nouveau/functions.php
        public_html/layout/professional/functions.php

- Bumped version number to 1.1.0svn
        public_html/lib-common.php

v1.0.1
------
- Fixed menu alignment
        public_html/layout/nouveau/functions.php
        public_html/layout/nouveau/htmlheader.thtml

- New advanced editor toolbar.  Modified user submitted story editor
  menu to have more advanced features, but it is missing the
  image / mediagallery insert.
        public_html/fckeditor/myconfig.js
        public_html/javascript/submitstory_fckeditor.js

- New user create / delete hooks CUSTOM_createUserHook($uid) and
  CUSTOM_deleteUserHook($uid)
        private/system/lib-user.php
        private/system/lib-custom.php.dist

- Made all Command n Control icons have a transparent background (issue 191) (Eric)
		public_html/captcha/captcha.png
		public_html/filemgmt/images/filemgmt.png
		public_html/forum/images/forum.png
		public_html/layout/nouveau/images/icons/configuration.png
		public_html/layout/nouveau/images/icons/docs.png
		public_html/layout/nouveau/images/icons/logout.png
		public_html/layout/nouveau/images/icons/trackback.png
		public_html/links/images/links.png
		public_html/polls/images/polls.png
		private/plugins/filemgmt/functions.inc

- Fix IE6 gl_navigation column differences in fixed vs. fluid gl_container layouts (issue 189) (Eric)
		public_html/layout/nouveau/css/ie6.css

- Added new VideoEmbed plugin for FCKeditor