@@ -12,7 +12,7 @@
       <span style="color:#fff;float:left;padding-left:10px;padding-top:5px;vertical-align:middle;">
       glFusion Documentation Project
       </span>
-	  <a style="float:right;padding-right:10px;padding-top:5px;vertical-align:middle;" href="http://www.gllabs.org">glFusion Wiki</a>
+	  <a style="float:right;padding-right:10px;padding-top:5px;vertical-align:middle;" href="http://www.gllabs.org/wiki/doku.php">glFusion Wiki</a>
 	</div>
     <div id="gl_wrapper">
     <div class="body-container">
